# task-manager-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: errors.py  main.py
app/repositories/: task_repository.py
app/routers/: tasks.py
app/services/: task_service.py
tests/: test_health.py  test_main.py
